<resources>
    <string name="app_name" translatable="false">Messaging</string>
    <string name="shortcut_compose_long_label">New conversation</string>
    <string name="shortcut_compose_short_label">Compose</string>
    <string name="shortcut_compose_disabled_message">Shortcut disabled</string>
    <string name="title_archived">Archived</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_prefs">Notifications</string>
    <string name="title_conversations">Conversations</string>
    <string name="filter_all">All</string>
    <string name="filter_groups">Groups</string>
    <string name="filter_unknown">Unknown</string>
    <string name="title_compose">Type a name or number</string>
    <string name="menu_add_person">Add person</string>
    <string name="menu_call">Call</string>
    <string name="menu_info">Details</string>
    <string name="menu_mms_part_save">Save to gallery</string>
    <string name="menu_mms_part_share">Share</string>
    <string name="menu_mms_part_forward">Forward</string>
    <string name="menu_mms_part_open">Open externally</string>
    <string name="main_title_selected">%d selected</string>
    <string name="main_menu_select_all">Select all</string>
    <string name="main_menu_archive">Archive</string>
    <string name="main_menu_unarchive">Unarchive</string>
    <string name="main_menu_delete">Delete</string>
    <string name="main_menu_add_contact">Add to contacts</string>
    <string name="main_menu_pin">Pin to top</string>
    <string name="main_menu_unpin">Unpin</string>
    <string name="main_menu_mark_all_read">Mark all read</string>
    <string name="main_menu_read">Mark read</string>
    <string name="main_menu_unread">Mark unread</string>
    <string name="main_menu_block">Block</string>
    <string name="main_menu_send_now">Send now</string>
    <string name="main_menu_rename_conversation">Rename conversation</string>
    <string name="main_syncing">Syncing messages…</string>
    <string name="main_syncing_count">Syncing messages… %1$d of %2$d</string>
    <string name="main_sender_you">You: %s</string>
    <string name="main_sender_draft">Draft: %s</string>
    <string name="main_message_results_title">Results in messages</string>
    <plurals name="main_message_results">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <string name="inbox_empty_text">Your conversations will appear here</string>
    <string name="inbox_search_empty_text">No results</string>
    <string name="archived_empty_text">Your archived conversations will appear here</string>
    <string name="main_fab_cd">Start new conversation</string>
    <string name="main_default_sms_title">Set as default</string>
    <string name="main_default_sms_message">Messaging needs to be your default SMS app to send and receive texts</string>
    <string name="main_default_sms_change">Change</string>
    <string name="main_permission_required">Permission required</string>
    <string name="main_permission_sms">Messaging needs permission to send and view SMS messages</string>
    <string name="main_permission_contacts">Messaging needs permission to view your contacts</string>
    <string name="main_permission_notifications">Messaging needs permission to display notifications</string>
    <string name="main_permission_allow">Allow</string>
    <string name="scheduled_menu_send_now">Send now</string>
    <string name="scheduled_menu_edit_message">Edit message</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_scheduled">Scheduled</string>
    <string name="drawer_blocking">Blocking</string>
    <string name="drawer_settings">Settings</string>
    <string name="dialog_delete_title">Delete</string>
    <plurals name="dialog_delete_message">
        <item quantity="one">Are you sure you would like to delete this conversation?</item>
        <item quantity="other">Are you sure you would like to delete %d conversations?</item>
    </plurals>
    <plurals name="dialog_delete_chat">
        <item quantity="one">Are you sure you would like to delete this message?</item>
        <item quantity="other">Are you sure you would like to delete %d messages?</item>
    </plurals>
    <plurals name="dialog_send_now">
        <item quantity="one">Are you sure you would like to send this message now?</item>
        <item quantity="other">Are you sure you would like to send %d messages now?</item>
    </plurals>
    <string name="dialog_edit_scheduled_message_title">Edit message</string>
    <string name="dialog_edit_scheduled_message">Editing this message will remove it from the schedule.\n\nMake sure to re-submit it on the next screen, or it will be lost.\n\nDo you want to continue?</string>
    <string name="dialog_edit_scheduled_message_positive_button">Yes, edit the message</string>
    <string name="dialog_clear_compose_title">Clear message</string>
    <string name="dialog_clear_compose">Clear the message? This action can\'t be undone.</string>
    <string-array name="message_options">
        <item>Copy text</item>
        <item>Forward</item>
        <item>Delete</item>
    </string-array>
    <string name="compose_number_picker_title">Choose a phone number</string>
    <string name="compose_number_picker_default">%s ∙ Default</string>
    <string name="compose_number_picker_once">Just once</string>
    <string name="compose_number_picker_always">Always</string>
    <string name="compose_title_selected">%d selected</string>
    <string name="compose_subtitle_results">%1$d of %2$d results</string>
    <string name="compose_send_group_title">Send as group message</string>
    <string name="compose_send_group_summary_on">Recipients and replies will be visible to everyone</string>
    <string name="compose_messages_empty">This is the start of your conversation. Say something nice!</string>
    <string name="compose_loading">Loading…</string>
    <string name="compose_vcard_label">Contact card</string>
    <string name="compose_scheduled_for">Scheduled time:</string>
    <string name="compose_scheduled_future">Selected time must be in the future!</string>
    <string name="compose_scheduled_toast">Added to scheduled messages</string>
    <string name="compose_scheduled_view">Scheduled messages for this conversation</string>
    <string name="compose_hint">Write a message…</string>
    <string name="compose_no_valid_recipients">Can\'t send to other participants</string>
    <string name="compose_menu_copy">Copy text</string>
    <string name="compose_menu_share">Share text</string>
    <string name="compose_menu_forward">Forward</string>
    <string name="compose_menu_show_status">Show status</string>
    <string name="compose_menu_delete">Delete</string>
    <string name="compose_menu_previous">Previous</string>
    <string name="compose_menu_next">Next</string>
    <string name="compose_menu_clear">Clear</string>
    <string name="compose_details_title">Message details</string>
    <string name="compose_details_type">Type: %s</string>
    <string name="compose_details_from">From: %s</string>
    <string name="compose_details_to">To: %s</string>
    <string name="compose_details_sent">Sent: %s</string>
    <string name="compose_details_received">Received: %s</string>
    <string name="compose_details_delivered">Delivered: %s</string>
    <string name="compose_details_error_code">Error code: %d</string>
    <string name="compose_attach_cd">Add an attachment</string>
    <string name="compose_attach_file_cd">Attach any file</string>
    <string name="compose_gallery_cd">Attach a photo</string>
    <string name="compose_audio_message_cd">Record an audio message</string>
    <string name="compose_camera_cd">Take a photo</string>
    <string name="compose_schedule_cd">Schedule message</string>
    <string name="compose_schedule_cancel_cd">Cancel schedule message</string>
    <string name="compose_contact_cd">Attach a contact</string>
    <string name="compose_contact_error">Error reading contact</string>
    <string name="compose_camera_error">Couldn\'t make room for the photo</string>
    <string name="compose_camera_unavailable">This phone has no camera app that can hand a photo back</string>
    <string name="compose_sim_changed_toast">SIM %1$d (%2$s) selected</string>
    <string name="compose_sim_cd">%s selected, change SIM card</string>
    <string name="compose_send_cd">Send message</string>
    <string name="compose_record_audio_msg_cd">Record audio message</string>
    <string name="info_name">Conversation title</string>
    <string name="info_notifications">Notifications</string>
    <string name="info_archive">Archive</string>
    <string name="info_block">Block</string>
    <string name="info_delete">Delete conversation</string>
    <string name="backup_title">Backup and restore</string>
    <string name="settings_category_general">Display</string>
    <string name="settings_text_size_title">Font size</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_delayed_title">Delayed sending</string>
    <string-array name="settings_swipe_actions">
        <item>None</item>
        <item>Archive</item>
        <item>Delete</item>
        <item>Block</item>
        <item>Call</item>
        <item>Mark read</item>
        <item>Mark unread</item>
        <item>Speak</item>
    </string-array>
    <string name="settings_delivery_title">Delivery confirmations</string>
    <string name="settings_read_receipts_title">Read receipts</string>
    <string name="settings_read_receipts_summary">MMS only. Tell a sender when you have read their message, and ask the same of the people you send to</string>
    <string name="settings_unread_at_top_title">Unread at the top</string>
    <string name="settings_signature_title">Signature</string>
    <string name="settings_unicode_title">Strip accents from outgoing SMS</string>
    <string name="settings_mobile_title">Mobile numbers only when composing</string>
    <string name="settings_auto_delete">Delete old messages automatically</string>
    <string name="settings_long_as_mms_title">Send long messages as MMS</string>
    <string name="settings_long_as_mms_summary">If your longer text messages are failing to send, or sending in the wrong order, you can send them as MMS messages instead. Additional charges may apply</string>
    <string name="settings_mms_size_title">Auto-compress MMS image attachments</string>
    <string name="settings_mms_weblink_title">Link handling in messages</string>
    <string name="settings_disable_screenshots_title">Disable screenshots</string>
    <string name="settings_sync_title">Sync messages</string>
    <string name="settings_sync_summary">Re-sync your messages with the native Android SMS database</string>
    <string name="settings_desktop_sync_title">Desktop Sync</string>
    <string name="settings_desktop_sync_summary_off">Text from your computer in a browser</string>
    <string name="settings_category_desktop_sync">Desktop Sync</string>
    <string name="signal_mute">Mute notifications</string>
    <string name="signal_unmute">Unmute notifications</string>
    <string name="signal_archive">Archive conversation</string>
    <string name="settings_desktop_sync_link_title">Show link</string>
    <string name="settings_desktop_sync_link_summary">Open this on your computer</string>
    <string name="settings_desktop_sync_tailscale_only_title">Tailscale only</string>
    <string name="settings_desktop_sync_tailscale_only_summary">Refuse connections that aren\'t on your tailnet</string>
    <string name="settings_desktop_sync_reset_title">Reset Desktop Sync link</string>
    <string name="settings_desktop_sync_reset_summary">Replace the token in your link</string>
    <string name="settings_category_sending">Sending</string>
    <string name="settings_category_storage">Storage and privacy</string>
</resources>