<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Moez Bhatti <moez.bhatti@gmail.com>
  ~
  ~ This file is part of QKSMS.
  ~
  ~ QKSMS is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ QKSMS is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with QKSMS.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Not a selection action like the rest of this menu: it acts on the whole inbox,
         and it is only present when there is something unread. On a 480px screen an
         overflow button costs the filter tabs their full names, so it earns its place
         only when it has something to do. -->
    <item
        android:id="@+id/markAllRead"
        android:title="@string/main_menu_mark_all_read"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/select_all"
        android:icon="?attr/actionModeSelectAllDrawable"
        android:title="@string/main_menu_select_all"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_archive_white_24dp"
        android:title="@string/main_menu_archive"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/unarchive"
        android:icon="@drawable/ic_inbox_black_24dp"
        android:title="@string/main_menu_unarchive"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/main_menu_delete"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:title="@string/main_menu_add_contact"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/pin"
        android:icon="@drawable/ic_baseline_push_pin_24"
        android:title="@string/main_menu_pin"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/unpin"
        android:icon="@drawable/ic_baseline_push_pin_24"
        android:title="@string/main_menu_unpin"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mute"
        android:title="@string/signal_mute"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/unmute"
        android:title="@string/signal_unmute"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/read"
        android:icon="@drawable/ic_drafts_black_24dp"
        android:title="@string/main_menu_read"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/unread"
        android:icon="@drawable/ic_markunread_black_24dp"
        android:title="@string/main_menu_unread"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/block"
        android:icon="@drawable/ic_block_white_24dp"
        android:title="@string/main_menu_block"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/rename"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/main_menu_rename_conversation"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>