<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Moez Bhatti <moez.bhatti@gmail.com>
  ~
  ~ This file is part of QKSMS.
  ~
  ~ QKSMS is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ QKSMS is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with QKSMS.  If not, see <http://www.gnu.org/licenses/>.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:id="@+id/preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:id="@+id/sectionRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/archived"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_archive_white_24dp"
                app:title="@string/drawer_archived" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/scheduled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_event_black_24dp"
                app:title="@string/drawer_scheduled" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/blocking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_cancel_black_24dp"
                app:title="@string/drawer_blocking" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_backup_black_24dp"
                app:title="@string/backup_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/categoryGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_settings_black_24dp"
                app:title="@string/settings_category_general" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/categoryNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_notifications_black_24dp"
                app:title="@string/settings_category_notifications" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/categorySending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_send_black_24dp"
                app:title="@string/settings_category_sending" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/categoryStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_clear_all_black_24dp"
                app:title="@string/settings_category_storage" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/categoryDesktopSync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_sync_black_24dp"
                app:title="@string/settings_category_desktop_sync" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_format_size_black_24dp"
                app:title="@string/settings_text_size_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/unreadAtTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_unreadattop_all_black_24dp"
                app:summary="@string/settings_unread_at_top_summary"
                app:title="@string/settings_unread_at_top_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/swipeActions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:icon="@drawable/ic_clear_all_black_24dp"
                app:summary="@string/settings_swipe_actions_summary"
                app:title="@string/settings_swipe_actions" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/messageLinkHandling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:icon="@android:drawable/stat_sys_warning"
                app:title="@string/settings_mms_weblink_title"
                tools:summary="100KB" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_notifications_black_24dp"
                app:title="@string/settings_notifications_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_check_white_24dp"
                app:summary="@string/settings_delivery_summary"
                app:title="@string/settings_delivery_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/readReceipts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_check_white_24dp"
                app:summary="@string/settings_read_receipts_summary"
                app:title="@string/settings_read_receipts_title"
                app:widget="@layout/settings_switch_widget" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionSending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_short_text_black_24dp"
                app:title="@string/settings_signature_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/delayed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_av_timer_black_24dp"
                app:title="@string/settings_delayed_title"
                tools:summary="No delay" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/longAsMms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_message_black_24dp"
                app:summary="@string/settings_long_as_mms_summary"
                app:title="@string/settings_long_as_mms_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/unicode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_translate_black_24dp"
                app:summary="@string/settings_unicode_summary"
                app:title="@string/settings_unicode_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/mobileOnly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_smartphone_black_24dp"
                app:summary="@string/settings_mobile_summary"
                app:title="@string/settings_mobile_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/mmsSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:icon="@drawable/ic_photo_size_select_actual_black_24dp"
                app:title="@string/settings_mms_size_title"
                tools:summary="100KB" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/autoDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_history_toggle_off_24"
                app:title="@string/settings_auto_delete"
                tools:summary="Never" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_sync_black_24dp"
                app:summary="@string/settings_sync_summary"
                app:title="@string/settings_sync_title" />

                <ProgressBar
                    android:id="@+id/syncingProgress"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="72dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:indeterminate="true" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/disableScreenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_screenshot"
                app:summary="@string/settings_diable_screenshots_summary"
                app:title="@string/settings_disable_screenshots_title"
                app:widget="@layout/settings_switch_widget" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionDesktop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/desktopSync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_send_black_24dp"
                app:summary="@string/settings_desktop_sync_summary_off"
                app:title="@string/settings_desktop_sync_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/desktopSyncLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_desktop_sync_link_summary"
                app:title="@string/settings_desktop_sync_link_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/desktopSyncTailscaleOnly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_desktop_sync_tailscale_only_summary"
                app:title="@string/settings_desktop_sync_tailscale_only_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/desktopSyncReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:icon="@drawable/ic_sync_black_24dp"
                app:summary="@string/settings_desktop_sync_reset_summary"
                app:title="@string/settings_desktop_sync_reset_title" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
