<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Moez Bhatti <moez.bhatti@gmail.com>
  ~
  ~ This file is part of QKSMS.
  ~
  ~ QKSMS is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ QKSMS is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with QKSMS.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/divider" />

    <com.wanderwildwood.kotozute.common.widget.PreferenceView
        android:id="@+id/groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/info_name" />

    <com.wanderwildwood.kotozute.common.widget.PreferenceView
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/info_notifications" />

    <com.wanderwildwood.kotozute.common.widget.PreferenceView
        android:id="@+id/markUnread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/main_menu_unread" />

    <com.wanderwildwood.kotozute.common.widget.PreferenceView
        android:id="@+id/archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/info_archive" />

    <com.wanderwildwood.kotozute.common.widget.PreferenceView
        android:id="@+id/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/info_block" />

    <com.wanderwildwood.kotozute.common.widget.PreferenceView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/info_delete" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/divider" />

</LinearLayout>
